--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^5.22.5",
     "nodemon": "^2.0.22",
+    "sequelize": "^5.22.5",
     "sequelize-cli": "^6.6.0"
   }
 }
